<resources>
    <string name="app_name">EchBT Stats</string>
    <string name="echbt_dash">EchBT Bike Stats</string>
    <string name="stats_header">  EchBT Bike Stats  </string>
    <string name="resistance">Resistance</string>
    <string name="power">Power</string>
    <string name="time">Time</string>
    <string name="kcal">KCal</string>
    <string name="dist">Dist</string>
    <string name="cadence">Cadence</string>
    <string name="reset_stats">Reset Stats</string>
    <string name="reset_time">Reset Time</string>
    <string name="pip">Open Stats Floating Window</string>
    <string name="exit">Exit</string>
    <string name="pip_help">In order to show the stats popup you will need to enable the Display Over Other Apps permission. When you select Open Stats Floating Window it will open the permissions page. Select EchBT Stats app and enable the permission to draw over other apps. Then press back to return to this app. You will only need to do this the first time.</string>
    <string name="avg">Avg</string>
    <string name="max">Max</string>
    <string name="echelon">Echelon</string>
    <string name="peloton">Peloton</string>
    <string name="miles">Miles</string>
    <string name="kilometers">Kilometers</string>
    <string name="Elapsed">Elapsed</string>
    <string name="Remaining">Remaining</string>
    <string name="zero">0</string>
    <string name="stats_format">Stats Format</string>
    <string name="dist_format">Distance Format</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="peloton_username">Peloton Username:</string>
    <string name="peloton_password">Peloton Password:</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="back_to_app">Go Back to App</string>
    <string name="cadence_icon_description">Icon representing cadence or speed</string>
    <string name="resistance_icon_description">Icon representing resistance level</string>
    <string name="power_icon_description">Icon representing power output</string>
    <string name="time_icon_description">Icon representing time</string>
</resources>
