<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="200dp"
    android:elevation="4dp"
    tools:visibility="visible">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="200sp"
        android:orientation="vertical">

        <!-- Top section with Cadence, Resistance, Power -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="3dp">

            <!-- Cadence Column -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="bottom"
                android:minWidth="50sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/min_cadence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20sp"
                    android:textAlignment="textEnd"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/title_avg_cadence_float"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avg"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/avg_cadence_float"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="top"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/cadenceBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progressTint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/cadence_float"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="100sp"
                    android:textAlignment="center"
                    android:textSize="60sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="bottom"
                android:minWidth="50sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/max_cadence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20sp"
                    android:textAlignment="textStart"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/title_max_cadence_float"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/max"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/max_cadence_float"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <!-- Resistance Column -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="bottom"
                android:minWidth="50sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/min_resistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20sp"
                    android:textAlignment="textEnd"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/title_avg_resistance_float"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avg"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/avg_resistance_float"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_Resistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:text="@string/resistance" />

                <ProgressBar
                    android:id="@+id/resistanceBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:padding="0dp"
                    android:progress="0"
                    android:progressTint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/resistance_float"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="100sp"
                    android:textAlignment="center"
                    android:textSize="60sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="bottom"
                android:minWidth="50sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/max_resistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20sp"
                    android:textAlignment="textStart"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/title_max_resistance_float"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/max"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/max_resistance_float"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <!-- Power Column -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="bottom"
                android:minWidth="50sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_avg_power_float"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avg"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/avg_power_float"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_Power"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/power"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/power_float"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="100sp"
                    android:textAlignment="center"
                    android:textSize="60sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="bottom"
                android:minWidth="50sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_max_power_float"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/max"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/max_power_float"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Bottom section with Time, Kcal, Dist, and Controls -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_time_float"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:contentDescription="@string/time"
                app:srcCompat="@mipmap/ic_time_white"
                app:tint="@color/black" />

            <Button
                android:id="@+id/decrease_time"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/decrease"
                android:textColor="@color/black"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/time_float"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".75"
                android:contentDescription="@string/power"
                android:gravity="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/increase_time"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/increase"
                android:textColor="@color/black"
                android:textSize="60sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_kcal_float"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:contentDescription="@string/kcal"
                app:srcCompat="@mipmap/ic_kcal"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/kcal_float"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".75"
                android:contentDescription="@string/kcal"
                android:gravity="center"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_dist_float"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:contentDescription="@string/dist"
                app:srcCompat="@mipmap/ic_dist"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/dist_float"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".75"
                android:contentDescription="@string/dist"
                android:gravity="center"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_back_float"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                android:contentDescription="@string/back_to_app"
                app:srcCompat="@mipmap/ic_back"
                app:tint="@color/black" />

            <!--            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_reset_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                android:contentDescription="@string/kcal"
                app:srcCompat="@mipmap/ic_reset_time" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_reset_stats"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                android:contentDescription="@string/kcal"
                app:srcCompat="@mipmap/ic_reset_stats" />-->
        </LinearLayout>
    </LinearLayout>
</FrameLayout>